--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ __pycache__/
 media/
 
 # Django stuff
-migrations/*initial.py
+migrations/*.py
+!migrations/__init__.py
 db.sqlite3
 
 # Django local settings file
