--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# for Mac
+.DS_Store
 
 # chash of Python
 __pycache__/
@@ -11,8 +13,8 @@ __pycache__/
 media/
 
 # Django stuff
-migrations/*.py
-!migrations/__init__.py
+**/migrations/*
+!**/migrations/__init__.py
 db.sqlite3
 
 # Django local settings file
