--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Django==2.2.4
-gunicorn==19.9.0
-Pillow==6.1.0
-pkg-resources==0.0.0
-psycopg2==2.8.3
-psycopg2-binary==2.8.3
-pytz==2019.2
+asgiref==3.2.3
+Django==3.0.2
+django-markdownx==3.0.1
+gunicorn==20.0.4
+Markdown==2.6.11
+Pillow==7.0.0
+py-gfm==0.1.4
+pytz==2019.3
 sqlparse==0.3.0
